Fix history section spacing: use padding-top + border-top separator

--- a/_calc.css
+++ b/_calc.css
@@ -277,7 +277,9 @@ input.Num.warn{
     border-bottom-color: #A6BD9F !important;
 }
 div.histsection{
-    margin-top: 28px;
+    margin-top: 0;
+    padding-top: 28px;
+    border-top: 1px solid #222;
     width: 100%;
 }
 #histList{
